# docker-cline-ai-template

./: .clinerules  .markdownlint.json  Dockerfile  README-next-creator.md  README.md  create-next.sh  display_images.py  docker-compose.yml  extract_image_data.py  image_processor_cli.py  next-app-creator.js  template_factory.sh  test_proc.sh  validate_and_optimize.sh
.github/: copilot-instructions.md
demo/: image_metadata.json
image_processor/: __init__.py
image_processor/api/: __init__.py  processor.py
image_processor/core/: __init__.py  metadata_extractor.py
image_processor/utils/: __init__.py  file_ops.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  create-nextapp.js
templates/base/: .gitignore  Dockerfile  README.md  bootstrap.js  bootstrap.sh
templates/node/: .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  setup.sh
templates/python/: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bootstrap.sh  environment.yml  pyproject.toml
templates/python/src/: __init__.py  main.py
templates/python/tests/: __init__.py  test_main.py
tests/: README.md  run_tests.sh
tests/e2e/: test_user_workflow.sh
tests/framework/: test_framework.sh
tests/integration/: test_template_initialization.sh
tests/meta/: README.md  test_clinerules.sh  test_dependency_management.sh  test_markdown.sh  test_template_creation.sh
tests/unit/: test_base_bootstrap.sh
(+7 files in other folders)
